--- a/第6章表单与v-model/selected.html
+++ b/第6章表单与v-model/selected.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="app">
-        <select v-model="selected">
+        <select v-model="selected" multiple>
             <option>html</option>
             <option value="js">JavaScript</option>
             <option>css</option>
@@ -20,7 +20,7 @@
         var app = new Vue({
             el:'#app',
             data:{
-                selected:'html'
+                selected:['html','js']
             }
         })
     </script>
